# agente_rh

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
adaptadores_mcp/: README.md  mcp.py
agent/: answer_cache.py  graph.py  llm.py  nodes.py  prompts.py  rag.py  service.py  sourcing_service.py  state.py
agente/: README.md  graph.py  nodes.py  prompts.py  service.py  sourcing_service.py  state.py
api/: auth.py  deps.py  httpmetrics.py  main.py  mcp.py  ratelimit.py  runtime.py  scheduler.py  telegram_bot.py
audit/: analisis.md  auditoria_final.md  auditoria_one.md  auditoria_two.md  auditoria_v2.md  auditoria_v3.md  auditoria_v4.md  chekeo.md  rubrica.md
channels/: base.py  documents.py  telegram.py  whatsapp.py
core/: README.md  config.py  estados.py
db/: client.py  repositories.py
deploy/: deploy.sh
despliegue/: README.md  deploy.sh
docs/: adr-seleccion-modelo.md  arquitectura.md  auditoria_e2e.md  auditoria_integraciones_externas.md  despliegue.md  gestion_secretos.md  guia.html  mapa_rubrica.md  postmortem-template.md
evaluation/: prescreen.py  quality.py  scorecard.py  scorer.py
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
integrations/: __init__.py  scheduling.py  sourcing.py
notifications/: candidate.py  email.py  outbox.py
observabilidad/: README.md  httpmetrics.py  observability.py
orquestacion/: README.md  classifier.py  llm.py  qa_chain.py
prototipo/: hira.dc.html
ranking/: README.md
retrieval/: README.md  answer_cache.py  company_kb.py  rag.py  semantic_cache.py  vectorstore.py
scripts/: create_user.py  demo.py  golden_eval.py  google_oauth.py  groundedness_judge.py  mcp_client_demo.py  mcp_register.sh  redteam_eval.py  retrieval_eval.py  run_mcp.sh  seed_company_kb.py  seed_prod_settings.py  setup-branch-protection.sh  verify_multistage.py
src/: classifier.py  config.py  embeddings.py  logging_config.py  observability.py  qa_chain.py  registry.py  reranker.py  semantic_cache.py  vectorstore.py
supabase/: config.toml
tests/: conftest.py  test_auth.py  test_backlog_close.py  test_backlog_hardening.py  test_config.py  test_contact.py  test_conversation_lock.py  test_cost_routing.py  test_costs.py  test_costs_page.py  test_docs_validation.py  test_documents.py  test_email_escaping.py  test_estados.py  test_golden_harness.py  test_inactivity.py  test_integrity.py  test_interview.py  test_iteration_limits.py  test_kb_reindex.py  test_langsmith_privacy.py  test_latency.py  test_listing.py  test_mcp.py  test_medical.py  test_metrics.py  test_multistage.py  test_o6_observability.py  test_observability.py  test_onboarding.py  test_outbox.py  test_prescreen.py  (+20 more)
(+103 files in other folders)
